--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Library</h1>
+    <form action="#" method="post" class="hidden">
+
+        <label for="title">
+            <p>Title</p>
+            <input type="text" name="title" id="title">
+        </label>
+        <label for="author">
+            <p>Author</p>
+            <input type="text" name="author" id="author">
+        </label>
+        <label for="pages">
+            <p>Pages</p>
+            <input type="number" name="pages" id="pages">
+        </label>
+        <label for="read">
+            <p>Read</p>
+            <input type="checkbox" name="read" id="read">
+        </label>
+        <button type="submit" class="addButton">Add</button>
+    </form>
+    <button type="button" class="opForm">+</button>
+    <main>
+        <article class="card"></article>
+    </main>
 </body>
 </html>
