Add add, remove and toggleRead function

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
         <label for="title">
             <p>Title</p>
-            <input type="text" name="title" id="title">
+            <input type="text" name="title" id="title" required>
         </label>
         <label for="author">
             <p>Author</p>
-            <input type="text" name="author" id="author">
+            <input type="text" name="author" id="author" required>
         </label>
         <label for="pages">
             <p>Pages</p>
-            <input type="number" name="pages" id="pages">
+            <input type="number" name="pages" id="pages" required>
         </label>
         <label for="read">
             <p>Read</p>
@@ -31,7 +31,6 @@
     </form>
     <button type="button" class="opForm">+</button>
     <main>
-        <article class="card"></article>
     </main>
 </body>
 </html>
